# Bitnion

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  COPYING  DISCLAIMER.md  INSTALL.md  LICENSE  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  configure~  whitepaper.md
.github/workflows/: verify.yml
build-aux/m4/: ax_boost_base.m4  ax_boost_filesystem.m4  ax_boost_process.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_boost_unit_test_framework.m4  ax_check_compile_flag.m4  ax_check_link_flag.m4  ax_check_preproc_flag.m4  ax_cxx_compile_stdcxx.m4  ax_gcc_func_attribute.m4  ax_pthread.m4  bitnion_find_bdb48.m4  bitnion_qt.m4  bitnion_subdir_to_include.m4  l_atomic.m4
build_msvc/: README.md  bitnion.sln  bitnion_config.h  common.init.vcxproj  common.qt.init.vcxproj  common.vcxproj  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
build_msvc/bench_bitnion/: bench_bitnion.vcxproj.in
build_msvc/bitnion-cli/: bitnion-cli.vcxproj
build_msvc/bitnion-qt/: bitnion-qt.vcxproj
ci/: README.md  test_run_all.sh
contrib/: README.md  bitnion-cli.bash-completion  bitnion-qt.pro  bitnion-tx.bash-completion  bitniond.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
docs/: crowdsale_instructions.md  crowdsale_log.md  index.html  premine_policy.md  tokenomics.md
src/: Makefile.am  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  (+99 more)
src/config/: bitcoind-config.h.in
src/consensus/: params.h
src/primitives/: block.cpp
src/univalue/: configure~
src/util/: moneystr.cpp
src/wallet/: fees.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.cpp
test/: test_bitnion.cpp
(+114 files in other folders)
